--- a/debian/nvidia-legacy-check.preinst.in
+++ b/debian/nvidia-legacy-check.preinst.in
@@ -1,6 +1,19 @@
 #!/bin/sh
 set -e
 
+# This script checks whether NVIDIA GPUs that are only supported by a
+# previous legacy driver are present in the system.
+# Unfortunately, there were several reports that this does not work
+# on some systems because lspci hangs. That seems to be a hardware
+# dependent issue. See e.g. #819869 for details.
+#
+# A possible workaround is to reboot with 'acpi=off' added to the
+# kernel boot options in the GRUB configuration.
+#
+# Alternatively this check can be disabled by preseeding:
+#   echo "nvidia-driver/check-for-unsupported-gpu boolean false" | debconf-set-selections
+
+
 . /usr/share/debconf/confmodule
 
 LEGACY_DRIVER="nvidia-legacy-340xx-driver"
@@ -255,6 +268,9 @@ find_unsupported_gpus()
 {
 	# Check for GPUs that are only supported up to $LEGACY_DRIVER
 	if lspci --version > /dev/null 2>&1; then
+		echo "Checking for legacy NVIDIA GPUs..." >&2
+		echo "If this appears to hang, try rebooting with 'acpi=off' added to the" >&2
+		echo "kernel boot options in the GRUB configuration." >&2
 		lspci -mn \
 		| awk '{ gsub("\"",""); if ($2 == "0300") { print $1 " " $3$4 } }' \
 		| tr '[:lower:]' '[:upper:]' \
