--- a/debian/libnvidia-ptxjitcompiler.lintian-overrides.in
+++ b/debian/libnvidia-ptxjitcompiler.lintian-overrides.in
@@ -1,7 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
 shlib-calls-exit
-[i386]: spelling-error-in-binary
+spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
