Add nvidia-drm-master-dev.patch to fix nvidia-drm build failure on 4.8+
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6854 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -14,3 +14,4 @@ ignore_xen_on_arm.patch
 arm-outer-sync.patch
 nvidia-drm-arm-cflags.patch
 #HAS_UVM#radix-tree-empty.patch
+nvidia-drm-master-dev.patch
