swap dependency between fatbinaryloader and ptxjitcompiler packages
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6886 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -944,6 +944,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
+ lib${nvidia}-ptxjitcompiler (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA FAT binary loader
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -959,7 +960,6 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
- lib${nvidia}-fatbinaryloader (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA PTX JIT Compiler
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
