--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -10,3 +10,4 @@ include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 arm-outer-sync.patch
 nvidia-drm-arm-cflags.patch
+nvidia-user-pages.patch
