reorder and group patches
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@6962 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,3 +1,7 @@
+# kernel support
+nvidia-user-pages.patch
+
+# build system updates
 separate-makefile-kbuild.patch
 KERNEL_UNAME.patch
 modernize-conftest.patch
@@ -12,5 +16,6 @@ not-silent.patch
 use-nv-kernel-ARCH.o_shipped.patch
 avoid-ld.gold.patch
 fix-typos.patch
-nvidia-user-pages.patch
+
+# 304xx specific
 disable-mtrr.patch
