Update symbols files for 375.20
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/375@6978 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-eglcore.symbols.in
+++ b/debian/libnvidia-eglcore.symbols.in
@@ -2500,6 +2500,6 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glWindowPos3sARB@Base 346
  _glWindowPos3sv@Base 346
  _glWindowPos3svARB@Base 346
- _glWindowRectanglesEXT@Base 367.36.02
+#MISSING: 375.20# _glWindowRectanglesEXT@Base 367.36.02
 libnvidia-glsi.so.#VERSION# #PACKAGE# #MINVER#
  (regex)"^_nv\d*glsi@Base$" 0
