--- a/debian/control
+++ b/debian/control
@@ -98,7 +98,7 @@ Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
  lib${nvidia}-glcore (= ${binary:Version}),
- libgl1-glvnd-${nvidia}-glx (= ${binary:Version}) | libgl1-${nvidia}-glx (= ${binary:Version}),
+ libgl1-${nvidia}-glvnd-glx (= ${binary:Version}) | libgl1-${nvidia}-glx (= ${binary:Version}),
  libegl-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
 Recommends:
@@ -288,6 +288,27 @@ Description: NVIDIA binary OpenGL/GLX GLVND stub library
  .
  This package contains a libGL.so.1 stub that dispatches to vendor
  implementations via GLVND.
+
+#Package: libgl1-${nvidia}-glvnd-glx
+Package: libgl1-nvidia-glvnd-glx
+Architecture: i386 amd64 armhf
+Multi-Arch: same
+Depends:
+ libgl1-glvnd-glx | libgl1-glvnd-nvidia-glx,
+ libglx-${nvidia}0 (= ${binary:Version}),
+ ${misc:Depends}
+Provides:
+ libgl1-nvidia-glx-any,
+Description: NVIDIA binary OpenGL/GLX library (GLVND variant)${nvidia:LegacyDesc}
+ These binary libraries provide optimized hardware acceleration of
+ OpenGL applications via a direct-rendering X Server.
+ .
+ See the description of the ${nvidia}-driver package
+ or /usr/share/doc/libgl1-${nvidia}-glvnd-glx/README.txt.gz
+ for a complete list of supported GPUs and PCI IDs.
+ .
+ This metapackage depends on the NVIDIA binary OpenGL/GLX implementation using
+ GLVND and the corresponding GLVND loader library.
 
 #Package: libgl1-${nvidia}-glx
 Package: libgl1-nvidia-glx
