--- a/debian/control
+++ b/debian/control
@@ -54,7 +54,7 @@ Replaces:
 Description: NVIDIA metapackage${nvidia:LegacyDesc}
  This metapackage depends on the NVIDIA binary driver and libraries
  that provide optimized hardware acceleration of
- OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server.
+ OpenGL/GLX/EGL/GLES/Vulkan applications via a direct-rendering X Server.
  .
  ${nvidia:kmod:Description}
  .
@@ -201,8 +201,8 @@ Description: Vendor neutral GL dispatch library -- libGLdispatch
  This is an implementation of the vendor-neutral dispatch layer for
  arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
  .
- This package contains the (binary) libGLdispatch shared library provided by
- NVIDIA.
+ This package contains the (binary) GLVND libGLdispatch.so.0 shared library
+ provided by NVIDIA.
 
 Package: libopengl0-glvnd-nvidia
 Architecture: i386 amd64 armhf
@@ -267,7 +267,7 @@ Description: NVIDIA binary GLX library${nvidia:LegacyDesc}
  for a complete list of supported GPUs and PCI IDs.
  .
  This package contains the driver specific binary GLX implementation by NVIDIA
- that is accessed via libglvnd.
+ that is accessed via GLVND.
 
 Package: libgl1-glvnd-nvidia-glx
 Architecture: i386 amd64 armhf
@@ -281,12 +281,12 @@ Conflicts:
  libgl1-${nvidia}-glx,
 Replaces:
  libgl1-${nvidia}-glx,
-Description: NVIDIA binary OpenGL/GLX GLVND stub library
- These binary libraries provide optimized hardware acceleration of
- OpenGL applications via a direct-rendering X Server.
+Description: Vendor neutral GL dispatch library -- libGL
+ This is an implementation of the vendor-neutral dispatch layer for
+ arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
  .
- This package contains a libGL.so.1 stub that dispatches to vendor
- implementations via GLVND.
+ This package contains the (binary) GLVND libGL.so.1 stub library provided by
+ NVIDIA which dispatches to vendor implementations via GLVND.
 
 #Package: libgl1-${nvidia}-glx
 Package: libgl1-nvidia-glx
@@ -308,7 +308,7 @@ Suggests:
  ${nvidia:kmod:source},
 Provides:
  libgl1-nvidia-glx-any,
-Description: NVIDIA binary OpenGL/GLX library${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL/GLX library (non-GLVND variant)${nvidia:LegacyDesc}
  The NVIDIA binary driver provides optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
  for graphics cards using NVIDIA chip sets.
@@ -316,6 +316,9 @@ Description: NVIDIA binary OpenGL/GLX library${nvidia:LegacyDesc}
  See the description of the ${nvidia}-driver package
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
+ .
+ This package contains the driver specific binary OpenGL/GLX implementation by
+ NVIDIA as a non-GLVND alternative.
 
 #Package: lib${nvidia}-glcore
 Package: libnvidia-glcore
@@ -354,7 +357,7 @@ Breaks:
  libegl1-nvidia (<< 355.11-3),
 Replaces:
  libegl1-nvidia (<< 355.11-3),
-Description: NVIDIA binary EGL GLVND stub library
+Description: Vendor neutral GL dispatch library -- libEGL
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
  .
@@ -391,7 +394,6 @@ Depends:
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary EGL library${nvidia:LegacyDesc}
- This package contains the EGL native platform graphics interface library.
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
  .
@@ -476,7 +478,7 @@ Description: NVIDIA binary OpenGL|ES 1.x library${nvidia:LegacyDesc}
  for a complete list of supported GPUs and PCI IDs.
  .
  This package contains the driver specific binary OpenGL|ES 1.x implementation
- by NVIDIA that is accessed via libglvnd.
+ by NVIDIA that is accessed via GLVND.
 
 Package: libgles2-glvnd-nvidia
 Architecture: i386 amd64 armhf
@@ -555,7 +557,7 @@ Description: NVIDIA binary OpenGL|ES 2.x library${nvidia:LegacyDesc}
  for a complete list of supported GPUs and PCI IDs.
  .
  This package contains the driver specific binary OpenGL|ES 2.x implementation
- by NVIDIA that is accessed via libglvnd.
+ by NVIDIA that is accessed via GLVND.
 
 #Package: lib${nvidia}-eglcore
 Package: libnvidia-eglcore
@@ -628,7 +630,7 @@ Enhances:
  libvulkan1,
 Provides:
  vulkan-icd,
-Description: NVIDIA Vulkan installable client driver (ICD)
+Description: NVIDIA Vulkan installable client driver (ICD)${nvidia:LegacyDesc}
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
  .
  This metapackage provides the NVIDIA installable client driver (ICD) for
@@ -945,7 +947,7 @@ Pre-Depends:
 Depends:
  lib${nvidia}-ptxjitcompiler (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA FAT binary loader
+Description: NVIDIA FAT binary loader${nvidia:LegacyDesc}
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
@@ -960,7 +962,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA PTX JIT Compiler
+Description: NVIDIA PTX JIT Compiler${nvidia:LegacyDesc}
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
