src:libglvnd is currently incompatible with our packaging
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7023 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -20,6 +20,8 @@ Build-Depends:
  libxext6 [!ppc64el],
  quilt,
  po-debconf,
+Build-Conflicts:
+ libglvnd-dev,
 Standards-Version: 3.9.8
 Homepage: http://www.nvidia.com
 XS-Autobuild: yes
@@ -190,6 +192,7 @@ Pre-Depends:
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Conflicts:
+ libglvnd0,
  libgldispatch0,
 Replaces:
  libgldispatch0,
